# claude_config

./: README.md  history.jsonl  settings.json
backups/: .claude.json.backup.1776166149431  .claude.json.backup.1776166223541  .claude.json.backup.1776166558587
file-history/2823aca7-6888-4a55-8dce-8031d0c37837/: 2558086ac6314030@v2
file-history/70b78087-38a9-4e28-99ea-05ed01339bb5/: 07e01c82e705732a@v2  0906a1766d35612e@v2  0d525ace31049d54@v2  1b649bf46b07aa6f@v2  2784af04c6115932@v2  2893c87ec7129125@v2  3ae5fd3d82369d24@v2  610cf2050ba9f9a1@v2  7963b85601c57481@v2  7cf15a719f4ff00f@v2  922ec3897fce1b05@v2  (+6 more)
homunculus/: projects.json
metrics/: costs.jsonl
plugins/: blocklist.json  install-counts-cache.json  installed_plugins.json  known_marketplaces.json
plugins/cache/cc-query-dev/cc-query/0.6.1/ccq/: Cargo.toml  build.rs
plugins/cache/cc-query-dev/cc-query/0.6.1/ccq/benches/: benchmarks.rs
plugins/cache/cc-query-dev/cc-query/0.6.1/ccq/src/: error.rs  formatter.rs  lib.rs  main.rs  query_session.rs  repl.rs  session_loader.rs  utils.rs
session-data/: 2026-04-14-test-session.tmp
sessions/: 32778.json
shell-snapshots/: snapshot-zsh-1776166270200-smeibb.sh
telemetry/: 1p_failed_events.081d4c88-c15e-41d5-9283-09f8d4639f68.c79a5267-9aae-47da-a8fa-944011d1fa2e.json  1p_failed_events.2fd77484-a1c5-407d-adef-1009446dc818.af6141ec-7f28-4f67-b403-5a746e72c041.json  1p_failed_events.c2558539-6a20-4b79-98fb-9ed47c2136f5.27e6adc3-83ad-4151-b5aa-c646e30459c2.json  1p_failed_events.da4598ca-6d52-47fb-a702-02d57f467d5d.434a4e1b-2e89-49b5-9b72-7dc6057b0c12.json
(+101 files in other folders)
